fixed tests not running